// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Detailspage tests should render full Detailspage 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  margin-left: -10px;
}

.c4>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4>* {
  margin-left: 10px;
}

.c6 {
  margin-left: -5px;
}

.c6>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6>* {
  margin-left: 5px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c15 {
  cursor: pointer;
}

.c16 svg path {
  fill: #bfbfbf;
}

.c7 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c7 * {
  height: inherit;
  width: inherit;
}

.c25 {
  height: 50px;
  width: 50px;
  line-height: 50px;
}

.c25 * {
  height: inherit;
  width: inherit;
}

.c20 {
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #e5e5e5;
  position: relative;
}

.c21 {
  margin: 0 0 1px 0;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c24 {
  margin-right: 5px;
}

.c26 {
  word-break: break-all;
  min-width: 100px;
}

.c34 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #f3f3f3;
  border-right: 1px solid #e5e5e5;
  cursor: pointer;
  background-color: #f3f3f3;
  border-bottom: 1px solid #f3f3f3;
  margin-bottom: -2px;
  border-top: 2px solid #11ab51;
}

.c34:hover {
  border-top: 2px solid #11ab51;
}

.c34:first-child {
  border-left: 1px solid #e5e5e5;
}

.c35 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #fff;
  border-right: 1px solid #e5e5e5;
  cursor: pointer;
  border-top: 2px solid #fff;
}

.c35:hover {
  border-top: 2px solid #e5e5e5;
}

.c35:first-child {
  border-left: 1px solid #fff;
}

.c32 {
  border-bottom: 2px solid #11ab51;
  margin-top: 30px;
  margin-bottom: 15px;
}

.c39 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
}

.c49 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c48>*:not(:last-child)::after {
  content: '•';
  margin-left: 5px;
}

.c40 td {
  padding: 4px 4px 4px 0;
}

.c40 tr td:first-child {
  padding-right: 5px;
}

.c29 {
  border-spacing: 0px;
  color: #7F7F7F;
  font-size: 10px;
}

.c29 :nth-child(even) {
  margin-left: 3px;
}

.c29 :nth-child(odd) {
  margin-left: 30px;
}

.c41 {
  width: 10%;
}

.c42 {
  width: 90%;
}

.c37 {
  font-size: 0.7em;
}

.c44 {
  height: 13px;
  box-sizing: content-box;
  display: inline-block;
  width: 100px;
  background: #4C4C4C;
  vertical-align: middle;
  text-align: center;
}

.c46 {
  z-index: 1;
  font-weight: bold;
  color: #fff;
  font-size: 9px;
  margin: 0;
  position: relative;
  top: -13px;
  padding-top: 1px;
}

.c45 {
  height: 13px;
  width: 100%;
  background: #4f91c7;
}

.c47 {
  white-space: nowrap;
}

.c43:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  position: relative;
  display: none;
}

.c9:hover .c11 {
  display: block;
}

.c12 {
  position: absolute;
  margin: 0;
  padding: 0;
  left: 0;
  top: 0;
  z-index: 100;
  list-style: none;
  font-size: 10px;
  width: 255px;
}

.c13 {
  height: 22px;
  width: 255px;
  border-left: 1px solid #7F7F7F;
  border-right: 1px solid #7F7F7F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #fff;
  font-weight: bold;
  text-indent: 12px;
  text-align: left;
}

.c13:first-child {
  border-top: 1px solid #7F7F7F;
}

.c13:last-child {
  border-bottom: 1px solid #7F7F7F;
}

.c13:hover {
  background: #11ab51;
  color: #fff;
}

.c13 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  cursor: pointer;
}

.c17 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #11ab51;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

@media print {
  .c15 {
    display: none;
  }
}

@media print {
  .c39 {
    border-collapse: collapse;
  }
}

@media print {
  .c49 {
    border-collapse: collapse;
  }
}

@media print {
  .c44 {
    background: none;
    border: 0;
  }
}

@media print {
  .c46 {
    color: black;
  }
}

@media print {
  .c45 {
    background: none;
  }
}

<div
  class="c0"
>
  <div
    class="c1 toolbar"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c2 c4"
      >
        <div
          class="c2 c3"
        >
          <div
            class="c5 c6"
          >
            <a
              href="test/en/scanning.html#managing-tasks"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c7"
                data-testid="svg-icon"
                title="Help: Tasks"
              >
                <svg
                  title="Help: Tasks"
                >
                  help.svg
                </svg>
              </span>
            </a>
            <a
              class="c8"
              href="/tasks"
            >
              <span
                class="c7"
                data-testid="svg-icon"
                title="Task List"
              >
                <svg
                  title="Task List"
                >
                  list.svg
                </svg>
              </span>
            </a>
            <span
              class="c7"
              data-testid="svg-icon"
              title="This is an Alterable Task. Reports may not relate to current Scan Config or Target!"
            >
              <svg
                title="This is an Alterable Task. Reports may not relate to current Scan Config or Target!"
              >
                alterable.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c6"
          >
            <span
              class="c9 c10"
            >
              <span
                class="c7"
                data-testid="svg-icon"
              >
                <svg>
                  new.svg
                </svg>
              </span>
              <div
                class="c11"
              >
                <ul
                  class="c12"
                >
                  <li
                    class="c13"
                  >
                    <div
                      class="c14"
                    >
                      New Task
                    </div>
                  </li>
                  <li
                    class="c13"
                  >
                    <div
                      class="c14"
                    >
                      New Container Task
                    </div>
                  </li>
                </ul>
              </div>
            </span>
            <span
              class="c15 c7"
              data-testid="svg-icon"
              title="Clone Task"
            >
              <svg
                title="Clone Task"
              >
                clone.svg
              </svg>
            </span>
            <span
              class="c15 c7"
              data-testid="svg-icon"
              title="Edit Task"
            >
              <svg
                title="Edit Task"
              >
                edit.svg
              </svg>
            </span>
            <span
              class="c15 c7"
              data-testid="svg-icon"
              title="Move Task to trashcan"
            >
              <svg
                title="Move Task to trashcan"
              >
                trashcan.svg
              </svg>
            </span>
            <span
              class="c15 c7"
              data-testid="svg-icon"
              title="Export Task as XML"
            >
              <svg
                title="Export Task as XML"
              >
                export.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c6"
          >
            <span
              class="c15 c7"
              data-testid="svg-icon"
              title="Start"
            >
              <svg
                title="Start"
              >
                start.svg
              </svg>
            </span>
            <span
              alt="Resume"
              class="c16 c7"
              data-testid="svg-icon"
              title="Task is not stopped"
            >
              <svg
                title="Task is not stopped"
              >
                resume.svg
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c4"
          >
            <div
              class="c2 c3"
            >
              <div
                class="c2 c6"
              >
                <a
                  class="c8"
                  data-testid="details-link"
                  href="/report/1234"
                  title="Last Report for Task foo from 07/30/2019"
                >
                  <span
                    class="c7"
                    data-testid="svg-icon"
                  >
                    <svg>
                      report.svg
                    </svg>
                  </span>
                </a>
                <a
                  class="c8"
                  href="/reports?filter=task_id%3D12345"
                  title="Total Reports for Task foo"
                >
                  <div
                    class="c17"
                  >
                    <span
                      class="c7"
                      data-testid="svg-icon"
                    >
                      <svg>
                        report.svg
                      </svg>
                    </span>
                    <span
                      class="c18"
                      data-testid="badge-icon"
                    >
                      1
                    </span>
                  </div>
                </a>
              </div>
            </div>
            <a
              class="c8"
              href="/results?filter=task_id%3D12345"
              title="Results for Task foo"
            >
              <div
                class="c17"
              >
                <span
                  class="c7"
                  data-testid="svg-icon"
                >
                  <svg>
                    result.svg
                  </svg>
                </span>
                <span
                  class="c18"
                  data-testid="badge-icon"
                >
                  1
                </span>
              </div>
            </a>
            <div
              class="c2 c3"
            >
              <div
                class="c2 c6"
              >
                <a
                  class="c8"
                  href="/notes?filter=task_id%3D12345"
                  title="Notes for Task foo"
                >
                  <div
                    class="c17"
                  >
                    <span
                      class="c7"
                      data-testid="svg-icon"
                    >
                      <svg>
                        note.svg
                      </svg>
                    </span>
                    <span
                      class="c18"
                      data-testid="badge-icon"
                    >
                      0
                    </span>
                  </div>
                </a>
                <a
                  class="c8"
                  href="/overrides?filter=task_id%3D12345"
                  title="Overrides for Task foo"
                >
                  <div
                    class="c17"
                  >
                    <span
                      class="c7"
                      data-testid="svg-icon"
                    >
                      <svg>
                        override.svg
                      </svg>
                    </span>
                    <span
                      class="c18"
                      data-testid="badge-icon"
                    >
                      0
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    class="entity-section"
  >
    <div
      class="c19 c20 section-header"
    >
      <h2
        class="c21 c22"
      >
        <div
          class="c23 c24"
        >
          <span
            class="c25"
            data-testid="svg-icon"
          >
            <svg>
              task.svg
            </svg>
          </span>
        </div>
        <div
          class="c23 c26"
        >
          Task: foo
        </div>
      </h2>
      <div
        class="c27"
      >
        <div
          class="c28"
        >
          <div
            class="c2 c29"
          >
            <div>
              ID:
            </div>
            <div>
              12345
            </div>
            <div>
              Created:
            </div>
            <div>
              Tue, Jul 16, 2019 8:31 AM CEST
            </div>
            <div>
              Modified:
            </div>
            <div>
              Tue, Jul 16, 2019 8:44 AM CEST
            </div>
            <div>
              Owner:
            </div>
            <span>
              admin
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c30"
    >
      <div
        class="c31 c32"
      >
        <div
          class="c33"
        >
          <div
            class="c34"
          >
            Information
          </div>
          <div
            class="c35"
          >
            <div
              class="c36"
            >
              <span>
                User Tags
              </span>
              <span
                class="c37"
              >
                (
                <i>
                  0
                </i>
                )
              </span>
            </div>
          </div>
          <div
            class="c35"
          >
            <div
              class="c36"
            >
              <span>
                Permissions
              </span>
              <span
                class="c37"
              >
                (
                <i>
                  0
                </i>
                )
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c38"
      >
        <table
          class="c39 c40"
        >
          <colgroup>
            <col
              class="c41"
              width="10%"
            />
            <col
              class="c42"
              width="90%"
            />
          </colgroup>
          <tbody
            class=""
          >
            <tr>
              <td>
                <div
                  class="c38"
                >
                  Name
                </div>
              </td>
              <td>
                <div
                  class="c38"
                >
                  foo
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c38"
                >
                  Comment
                </div>
              </td>
              <td>
                <div
                  class="c38"
                >
                  bar
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c38"
                >
                  Alterable
                </div>
              </td>
              <td>
                <div
                  class="c38"
                >
                  Yes
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c38"
                >
                  Status
                </div>
              </td>
              <td>
                <div
                  class="c38"
                >
                  <a
                    class="c8 c43"
                    data-testid="details-link"
                    href="/report/1234"
                  >
                    <div
                      class="c44"
                      data-testid="progressbar-box"
                      title="Done"
                    >
                      <div
                        background="low"
                        class="c45"
                        data-testid="progress"
                      />
                      <div
                        class="c46"
                      >
                        <span
                          class="c47"
                        >
                          Done
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="c30"
        >
          <div
            class="c38"
          >
            <h2>
              Target
            </h2>
            <div>
              <a
                class="c8"
                data-testid="details-link"
                href="/target/5678"
              >
                target1
              </a>
            </div>
          </div>
          <div
            class="c38"
          >
            <h2>
              Alerts
            </h2>
            <div>
              <div
                class="c2 c3"
              >
                <div
                  class="c2 c6 c48"
                >
                  <span>
                    <a
                      class="c8"
                      data-testid="details-link"
                      href="/alert/91011"
                    >
                      alert1
                    </a>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c38"
          >
            <h2>
              Scanner
            </h2>
            <div>
              <table
                class="c49 c40"
              >
                <colgroup>
                  <col
                    class="c41"
                    width="10%"
                  />
                  <col
                    class="c42"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c38"
                      >
                        Name
                      </div>
                    </td>
                    <td>
                      <div
                        class="c38"
                      >
                        <span>
                          <a
                            class="c8"
                            data-testid="details-link"
                            href="/scanner/1516"
                          >
                            scanner1
                          </a>
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c38"
                      >
                        Type
                      </div>
                    </td>
                    <td>
                      <div
                        class="c38"
                      >
                        OpenVAS Scanner
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c38"
          >
            <h2>
              Assets
            </h2>
            <div>
              <table
                class="c49 c40"
              >
                <colgroup>
                  <col
                    class="c41"
                    width="10%"
                  />
                  <col
                    class="c42"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c38"
                      >
                        Add to Assets
                      </div>
                    </td>
                    <td>
                      <div
                        class="c38"
                      >
                        Yes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c38"
                      >
                        Apply Overrides
                      </div>
                    </td>
                    <td>
                      <div
                        class="c38"
                      >
                        Yes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c38"
                      >
                        Min QoD
                      </div>
                    </td>
                    <td>
                      <div
                        class="c38"
                      >
                        70 %
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c38"
          >
            <h2>
              Scan
            </h2>
            <div>
              <table
                class="c49 c40"
              >
                <colgroup>
                  <col
                    class="c41"
                    width="10%"
                  />
                  <col
                    class="c42"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c38"
                      >
                        Duration of last Scan
                      </div>
                    </td>
                    <td>
                      <div
                        class="c38"
                      >
                        2 minutes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c38"
                      >
                        Auto delete Reports
                      </div>
                    </td>
                    <td>
                      <div
                        class="c38"
                      >
                        Do not automatically delete reports
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Task ToolBarIcons tests should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  margin-left: -10px;
}

.c2>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2>* {
  margin-left: 10px;
}

.c4 {
  margin-left: -5px;
}

.c4>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4>* {
  margin-left: 5px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c13 {
  cursor: pointer;
}

.c14 svg path {
  fill: #bfbfbf;
}

.c5 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c5 * {
  height: inherit;
  width: inherit;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  position: relative;
  display: none;
}

.c7:hover .c9 {
  display: block;
}

.c10 {
  position: absolute;
  margin: 0;
  padding: 0;
  left: 0;
  top: 0;
  z-index: 100;
  list-style: none;
  font-size: 10px;
  width: 255px;
}

.c11 {
  height: 22px;
  width: 255px;
  border-left: 1px solid #7F7F7F;
  border-right: 1px solid #7F7F7F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #fff;
  font-weight: bold;
  text-indent: 12px;
  text-align: left;
}

.c11:first-child {
  border-top: 1px solid #7F7F7F;
}

.c11:last-child {
  border-bottom: 1px solid #7F7F7F;
}

.c11:hover {
  background: #11ab51;
  color: #fff;
}

.c11 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  cursor: pointer;
}

.c15 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #11ab51;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

@media print {
  .c13 {
    display: none;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c3 c4"
      >
        <a
          href="test/en/scanning.html#managing-tasks"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c5"
            data-testid="svg-icon"
            title="Help: Tasks"
          >
            <svg
              title="Help: Tasks"
            >
              help.svg
            </svg>
          </span>
        </a>
        <a
          class="c6"
          href="/tasks"
        >
          <span
            class="c5"
            data-testid="svg-icon"
            title="Task List"
          >
            <svg
              title="Task List"
            >
              list.svg
            </svg>
          </span>
        </a>
        <span
          class="c5"
          data-testid="svg-icon"
          title="This is an Alterable Task. Reports may not relate to current Scan Config or Target!"
        >
          <svg
            title="This is an Alterable Task. Reports may not relate to current Scan Config or Target!"
          >
            alterable.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c4"
      >
        <span
          class="c7 c8"
        >
          <span
            class="c5"
            data-testid="svg-icon"
          >
            <svg>
              new.svg
            </svg>
          </span>
          <div
            class="c9"
          >
            <ul
              class="c10"
            >
              <li
                class="c11"
              >
                <div
                  class="c12"
                >
                  New Task
                </div>
              </li>
              <li
                class="c11"
              >
                <div
                  class="c12"
                >
                  New Container Task
                </div>
              </li>
            </ul>
          </div>
        </span>
        <span
          class="c13 c5"
          data-testid="svg-icon"
          title="Clone Task"
        >
          <svg
            title="Clone Task"
          >
            clone.svg
          </svg>
        </span>
        <span
          class="c13 c5"
          data-testid="svg-icon"
          title="Edit Task"
        >
          <svg
            title="Edit Task"
          >
            edit.svg
          </svg>
        </span>
        <span
          class="c13 c5"
          data-testid="svg-icon"
          title="Move Task to trashcan"
        >
          <svg
            title="Move Task to trashcan"
          >
            trashcan.svg
          </svg>
        </span>
        <span
          class="c13 c5"
          data-testid="svg-icon"
          title="Export Task as XML"
        >
          <svg
            title="Export Task as XML"
          >
            export.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c4"
      >
        <span
          class="c13 c5"
          data-testid="svg-icon"
          title="Start"
        >
          <svg
            title="Start"
          >
            start.svg
          </svg>
        </span>
        <span
          alt="Resume"
          class="c14 c5"
          data-testid="svg-icon"
          title="Task is not stopped"
        >
          <svg
            title="Task is not stopped"
          >
            resume.svg
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c2"
      >
        <div
          class="c0 c1"
        >
          <div
            class="c0 c4"
          >
            <a
              class="c6"
              data-testid="details-link"
              href="/report/1234"
              title="Last Report for Task foo from 07/30/2019"
            >
              <span
                class="c5"
                data-testid="svg-icon"
              >
                <svg>
                  report.svg
                </svg>
              </span>
            </a>
            <a
              class="c6"
              href="/reports?filter=task_id%3D12345"
              title="Total Reports for Task foo"
            >
              <div
                class="c15"
              >
                <span
                  class="c5"
                  data-testid="svg-icon"
                >
                  <svg>
                    report.svg
                  </svg>
                </span>
                <span
                  class="c16"
                  data-testid="badge-icon"
                >
                  1
                </span>
              </div>
            </a>
          </div>
        </div>
        <a
          class="c6"
          href="/results?filter=task_id%3D12345"
          title="Results for Task foo"
        >
          <div
            class="c15"
          >
            <span
              class="c5"
              data-testid="svg-icon"
            >
              <svg>
                result.svg
              </svg>
            </span>
            <span
              class="c16"
              data-testid="badge-icon"
            >
              1
            </span>
          </div>
        </a>
        <div
          class="c0 c1"
        >
          <div
            class="c0 c4"
          >
            <a
              class="c6"
              href="/notes?filter=task_id%3D12345"
              title="Notes for Task foo"
            >
              <div
                class="c15"
              >
                <span
                  class="c5"
                  data-testid="svg-icon"
                >
                  <svg>
                    note.svg
                  </svg>
                </span>
                <span
                  class="c16"
                  data-testid="badge-icon"
                >
                  2
                </span>
              </div>
            </a>
            <a
              class="c6"
              href="/overrides?filter=task_id%3D12345"
              title="Overrides for Task foo"
            >
              <div
                class="c15"
              >
                <span
                  class="c5"
                  data-testid="svg-icon"
                >
                  <svg>
                    override.svg
                  </svg>
                </span>
                <span
                  class="c16"
                  data-testid="badge-icon"
                >
                  3
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
